# Computer-Vision-MLOps-Pipeline

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUDIT.md  Dockerfile  FIX_PLAN.md  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml
.github/workflows/: ci.yml  retrain.yml
src/cvmlops/: __init__.py  config.py  mlflow_utils.py
src/cvmlops/data/: convert_hripcb.py  prepare.py  synthetic.py  tile.py
src/cvmlops/monitor/: check.py  drift.py  features.py  logging_store.py
src/cvmlops/registry/: promote.py
src/cvmlops/serve/: app.py  asgi.py  model.py  tiled_inference.py
src/cvmlops/train/: register_best.py  train.py
src/cvmlops/ui/: gradio_app.py
tests/: conftest.py  test_api.py  test_convert.py  test_data.py  test_monitor.py  test_registry.py  test_smoke_train.py  test_tile.py  test_train_utils.py
