[project]
name = "cvmlops"
version = "0.1.0"
description = "PCB defect detection with a full closed MLOps loop (YOLO + MLflow + DVC + Evidently)"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.3",
    "torch>=2.2",
    "mlflow>=2.14",
    "dvc>=3.50",
    "evidently>=0.4.30",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "gradio>=4.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "python-multipart>=0.0.9",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.5", "pre-commit>=3.7"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["heavy: needs ultralytics/torch training (deselect with -m 'not heavy')"]
